# led-matrix-enclosure

./: LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: build.yaml
src/led_matrix_enclosure/: cli.py  corners.py  dimensions.py  exporter.py  helpers.py  sides.py  visualizer.py
src/led_matrix_enclosure/builders/: chassis.py  chassis_border_support_ledge.py  chassis_border_wire_slot.py  chassis_borders.py  chassis_bottom.py  chassis_module_connector.py  chassis_module_connectors.py  chassis_pillar.py  chassis_pillars.py  enclosure.py  lid.py  lid_diffuser.py  lid_grid.py  module.py
src/led_matrix_enclosure/cli/: chassis.py  cli_tool.py  enclosure.py  lid.py
src/led_matrix_enclosure/models/: composite_led_matrix.py  led_matrix.py
src/led_matrix_enclosure/parameters/: chassis.py  chassis_borders.py  chassis_bottom.py  chassis_module_connectors.py  chassis_pillar.py  enclosure.py  lid.py  lid_diffuser.py  lid_grid.py  module.py
src/led_matrix_enclosure/parts/: chassis.py  chassis_border_support_ledge.py  chassis_border_wire_slot.py  chassis_borders.py  chassis_bottom.py  chassis_connectors.py  chassis_pillars.py  connector.py  diffuser.py  enclosure.py  grid.py  lid.py  module.py  pillar.py
src/led_matrix_enclosure/profiles/: led_matrix.py
tests/: test_dimensions.py  test_sides.py
tests/models/: test_composite_led_matrix.py
